syntax = "proto3";
package alliance.alliance;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

// Params defines the parameters for the shared security module.
message Params {
  option (gogoproto.equal)            = true;
  google.protobuf.Duration reward_delay_time = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true
  ];
}
